main.css
body {
    font-family: Arial, sans-serif;
    color: #333;
    margin: 0;
    padding: 20px;
}

#header {
    margin-bottom: 20px;
    text-align: center;
}

button {
    background-color: #ffcccb; 
    color: #333;
    border: none;
    padding: 10px 15px;
    margin: 5px;
    border-radius: 5px; 
    cursor: pointer; 
}

button:hover {
    background-color: #EF368A; 
    color: white;
}

#weekInfo {
    color: #1B8D8A; 
    margin: 0 10px;
    font-weight: bold;
}

table {
    width: 100%;
    border-collapse: collapse;
    table-layout: fixed;
}

th, td {
    text-align: center;
    padding: 8px;
}

td {
    background-color: white;
}

th:first-child {
    border-radius: 5px 0 0 5px;
}

th:last-child {
    border-radius: 0 5px 5px 0;
}

th {
    background-color: #1B8D8A;
    color: #333;
}

td:not(:empty):not(:first-child) {
    background-color: #e2fafa; 
}

tbody tr:hover td {
    background-color: #ffcccb;
    color: #333;
}

tbody tr:hover td:hover {
    cursor: pointer;
    box-shadow: inset 0px 0px 0px 2px #EF368A;
}

.note {
    font-size: smaller;
    font-weight: bold;
    color: #EF368A;
    padding-left: 5px;
}

.blocked {
    background-image: linear-gradient(
        45deg,
        #ddd 25%,
        transparent 25%,
        transparent 50%,
        #ddd 50%, 
        #ddd 75%, 
        transparent 75%, 
        transparent 100% 
    );
    background-size: 20px 20px;
    background-attachment: fixed;
}

.container {
    display: flex;
    justify-content: start;
}

ol {
    background-color: #aff0ee; 
    padding: 5px 0 0 0; 
    margin: 0 5px 0 0;
    list-style-position: inside;
    width: 300px;
    max-width: 100%;
    border-radius: 5px;
}

li {
    padding: 5px 15px;
    margin: 0 5px 5px 5px;
    transition: background-color 0.3s;
    box-sizing: border-box;
    cursor: pointer;
}

li:hover {
    background-color: #1B8D8A;
    border-radius: 5px;
    box-sizing: border-box;
    color: white;
}

.highlighted {
    background-color: #EF368A !important;
    border-radius: 5px;
    box-sizing: border-box;
    color: white;
}

.under, .same, .over {
    font-size: small; 
    font-weight: bold; 
}

.under {
    color: white;
}

.same {
    color: #ffcccb; 
}

.over {
    color: black;
}

